testing playing bet code updated

--- a/src/New_Dashboards/Admin/Testing/style.css
+++ b/src/New_Dashboards/Admin/Testing/style.css
@@ -93,6 +93,11 @@ button {
   color: white;
 }
 
+.middle{
+  background-color: rgb(79, 79, 219);
+  color: white;
+}
+
 .number49{
   position: absolute;
   z-index: 9;
